<<<<<<< Updated upstream:caves.tscn
[gd_scene load_steps=3 format=3 uid="uid://c5s25uvu1jej6"]

[ext_resource type="Texture2D" uid="uid://odl8acnv4sda" path="res://cave.png" id="1_0wsns"]
[ext_resource type="Script" path="res://caves.gd" id="1_2pie6"]
=======
[gd_scene load_steps=10 format=3 uid="uid://c5s25uvu1jej6"]

[ext_resource type="Script" path="res://scenes/game/caves.gd" id="1_67k3o"]
[ext_resource type="Texture2D" uid="uid://odl8acnv4sda" path="res://assets/sprites/cave.png" id="2_6mwlx"]
[ext_resource type="Texture2D" uid="uid://02k74nd17w0r" path="res://assets/sprites/arrowUp.png" id="2_sopod"]
[ext_resource type="Texture2D" uid="uid://0emu6lmmr4ki" path="res://assets/sprites/pointer.png" id="2_ymyl3"]
[ext_resource type="Texture2D" uid="uid://dx25p57iix70y" path="res://assets/sprites/arrowLeft.png" id="3_g146t"]
[ext_resource type="Texture2D" uid="uid://beoynhqs8ca3n" path="res://assets/sprites/arrowRight.png" id="4_8y5ow"]
[ext_resource type="Texture2D" uid="uid://ljbjrka13m0g" path="res://assets/sprites/test 2.png" id="7_4wlhy"]
[ext_resource type="Texture2D" uid="uid://car6on5l38yfm" path="res://assets/sprites/test 3.png" id="8_tkcki"]
[ext_resource type="Texture2D" uid="uid://cxpvxd5hbhi3w" path="res://assets/sprites/test.png" id="9_3wk2c"]
>>>>>>> Stashed changes:scenes/game/caves.tscn

[node name="CaveScene" type="Node2D"]
script = ExtResource("1_2pie6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="CaveBackground" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0wsns")

[node name="LeftDoor" type="Area2D" parent="."]

[node name="LeftDoorCollision" type="CollisionPolygon2D" parent="LeftDoor"]
polygon = PackedVector2Array(13.1021, 46.4005, 52.747, 61.9912, 84.8194, 81.1456, 100.41, 97.1817, 114.219, 120.791, 127.137, 152.863, 128.473, 175.135, 130.255, 202.308, 66.1105, 208.99, 46.0653, 206.317, 31.3655, 193.399, 16.6656, 152.417, 1.07492, 109.654, 1.07492, 45.5096)

[node name="MiddleDoor" type="Area2D" parent="."]

[node name="MiddleDoorCollision" type="CollisionPolygon2D" parent="MiddleDoor"]
polygon = PackedVector2Array(144.51, 86.491, 159.655, 78.9183, 187.273, 72.2366, 212.218, 49.9641, 282.153, 56.6458, 283.49, 78.0274, 275.917, 112.327, 285.717, 145.736, 285.717, 145.29, 291.953, 160.881, 291.508, 173.799, 272.799, 197.853, 230.927, 192.508, 209.1, 200.526, 194.4, 193.844, 173.909, 163.999, 142.282, 94.0636)

[node name="RightDoor" type="Area2D" parent="."]

[node name="RightDoorCollision" type="CollisionPolygon2D" parent="RightDoor"]
polygon = PackedVector2Array(371.689, 56.2004, 420.688, 58.4276, 450.533, 83.3728, 449.642, 105.2, 446.079, 120.345, 446.079, 153.308, 426.479, 195.181, 359.216, 201.417, 343.18, 168.899, 340.953, 131.481, 348.971, 82.4819, 357.434, 65.1094)

[node name="Back" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Back"]
polygon = PackedVector2Array(46.1872, 261.127, 100.364, 239.708, 373.767, 239.078, 432.983, 275.616, 44, 280)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(49, 28)
texture = ExtResource("7_4wlhy")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(217, 26)
texture = ExtResource("8_tkcki")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(398, 28)
texture = ExtResource("9_3wk2c")

[connection signal="input_event" from="LeftDoor" to="." method="_on_left_door_input_event" binds= [1]]
<<<<<<< Updated upstream:caves.tscn
[connection signal="input_event" from="MiddleDoor" to="." method="_on_middle_door_input_event" binds= [2]]
[connection signal="input_event" from="RightDoor" to="." method="_on_right_door_input_event" binds= [3]]
=======
[connection signal="mouse_entered" from="LeftDoor" to="." method="_on_left_door_mouse_entered"]
[connection signal="mouse_exited" from="LeftDoor" to="." method="_on_mouse_exited"]
[connection signal="input_event" from="MiddleDoor" to="." method="_on_middle_door_input_event" binds= [2]]
[connection signal="mouse_entered" from="MiddleDoor" to="." method="_on_middle_door_mouse_entered"]
[connection signal="mouse_exited" from="MiddleDoor" to="." method="_on_mouse_exited"]
[connection signal="input_event" from="RightDoor" to="." method="_on_right_door_input_event" binds= [3]]
[connection signal="mouse_entered" from="RightDoor" to="." method="_on_right_door_mouse_entered"]
[connection signal="mouse_exited" from="RightDoor" to="." method="_on_mouse_exited"]
>>>>>>> Stashed changes:scenes/game/caves.tscn
[connection signal="input_event" from="Back" to="." method="_on_back_input_event" binds= [0]]
